--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -2,7 +2,7 @@ name: Build APP
 
 on:
   push:
-    branches: [ "master", "old-android" ]
+    branches: [ "master"]
   pull_request:
     branches: [ "master" ]
 
@@ -22,32 +22,8 @@ jobs:
           fastlane-env: "debug"
           ruby-version: "3.3.0"
       - uses: actions/upload-artifact@v3
-        if: github.event_name == 'pull_request'
+        #if: github.event_name == 'pull_request'
         name: Upload app APK
         with:
           name: App bundle
           path: app-debug.apk
-      # https://github.com/r0adkll/sign-android-release/issues/84#issuecomment-1889636075
-      - name: Setup build tool version variable
-        shell: bash
-        run: |
-          BUILD_TOOL_VERSION=$(ls /usr/local/lib/android/sdk/build-tools/ | tail -n 1)
-          echo "BUILD_TOOL_VERSION=$BUILD_TOOL_VERSION" >> $GITHUB_ENV
-          echo Last build tool version is: $BUILD_TOOL_VERSION
-      - uses: r0adkll/sign-android-release@v1
-        if: github.event_name != 'pull_request'
-        name: Sign app APK
-        id: sign_app
-        with:
-          releaseDirectory: .
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        env:
-          BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
-      - uses: actions/upload-artifact@v4
-        if: github.event_name != 'pull_request'
-        name: Upload signed app APK
-        with:
-          name: Signed app bundle
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
