feat: 添加日志活动，支持日志查看、刷新和清空功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity
             android:name=".ui.PeerListActivity"
             android:label="@string/peer_list" />
+        <activity
+            android:name=".ui.LogsActivity"
+            android:label="@string/logs_title" />
 
         <receiver
             android:name=".service.StartupReceiver"
