--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -28,12 +28,13 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       
-      # 解码并创建密钥库
+      # 解码并创建密钥库文件
       - name: Decode Keystore
         env:
           ENCODED_KEYSTORE: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
           if [ -n "$ENCODED_KEYSTORE" ]; then
+            # 确保创建在项目根目录下
             echo "$ENCODED_KEYSTORE" | base64 --decode > zerotierfix.keystore
             ls -la zerotierfix.keystore
           else
@@ -47,7 +48,8 @@ jobs:
       # 构建Release APK
       - name: Build Release APK
         env:
-          ZEROTIERFIX_KEYSTORE_FILE: zerotierfix.keystore
+          # 指定完整路径
+          ZEROTIERFIX_KEYSTORE_FILE: ${{ github.workspace }}/zerotierfix.keystore
           ZEROTIERFIX_KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           ZEROTIERFIX_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           ZEROTIERFIX_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
@@ -63,7 +65,7 @@ jobs:
       # 上传Release构建产物
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
-        if: env.ENCODED_KEYSTORE != ''
+        if: success()
         with:
           name: app-release
           path: app/build/outputs/apk/release/app-release.apk
