--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,20 @@ def useEnvVariables = System.getenv('ZEROTIERFIX_KEYSTORE_PASSWORD') != null
 
 if (useEnvVariables) {
     println "使用环境变量中的签名配置"
-    keystoreProperties.put('storeFile', System.getenv('ZEROTIERFIX_KEYSTORE_FILE') ?: 'zerotierfix.keystore')
+    // 获取环境变量中的keystore文件名
+    def keystoreFileName = System.getenv('ZEROTIERFIX_KEYSTORE_FILE') ?: 'zerotierfix.keystore'
+    // 确保keystoreFile指向项目根目录下的文件
+    keystoreProperties.put('storeFile', rootProject.file(keystoreFileName).absolutePath)
     keystoreProperties.put('storePassword', System.getenv('ZEROTIERFIX_KEYSTORE_PASSWORD'))
     keystoreProperties.put('keyAlias', System.getenv('ZEROTIERFIX_KEY_ALIAS'))
     keystoreProperties.put('keyPassword', System.getenv('ZEROTIERFIX_KEY_PASSWORD'))
 } else if (keystorePropertiesFile.exists()) {
     println "使用本地keystore.properties中的签名配置"
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    // 如果是相对路径，确保它是相对于项目根目录的
+    if (keystoreProperties['storeFile'] && !new File(keystoreProperties['storeFile'].toString()).isAbsolute()) {
+        keystoreProperties.put('storeFile', rootProject.file(keystoreProperties['storeFile']).absolutePath)
+    }
 }
 
 greendao {
@@ -43,7 +50,7 @@ android {
     signingConfigs {
         release {
             if (keystorePropertiesFile.exists() || useEnvVariables) {
-                storeFile file(keystoreProperties['storeFile'])
+                storeFile new File(keystoreProperties['storeFile'].toString())
                 storePassword keystoreProperties['storePassword']
                 keyAlias keystoreProperties['keyAlias']
                 keyPassword keystoreProperties['keyPassword']
