feat: 添加已授权设备列表功能及相关界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         <activity
             android:name=".ui.LogsActivity"
             android:label="@string/logs_title" />
+        <activity
+            android:name=".ui.AuthorizedDevicesActivity"
+            android:label="@string/title_authorized_devices" />
 
         <receiver
             android:name=".service.StartupReceiver"
