--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -2,7 +2,7 @@ name: Build APP
 
 on:
   push:
-    branches: [ "master"]
+    branches: [ "master","*"]
   pull_request:
     branches: [ "*" ]
   workflow_dispatch:
